# experiments

./: .gitignore  README.md  \  go.mod
axum-idiomatic-validate-and-user-context/: .gitignore  Cargo.toml  docker-compose.yml
axum-idiomatic-validate-and-user-context/.cargo/: config.toml
axum-idiomatic-validate-and-user-context/.config/: nextest.toml
axum-idiomatic-validate-and-user-context/migrations/: 001_init.sql  002_add_user_role.sql
axum-idiomatic-validate-and-user-context/src/: auth.rs  db.rs  errors.rs  lib.rs  main.rs  validate.rs
axum-idiomatic-validate-and-user-context/src/models/: post.rs  user.rs
axum-idiomatic-validate-and-user-context/src/routes/: mod.rs  posts.rs  users.rs
axum-idiomatic-validate-and-user-context/tests/: e2e.rs  integration.rs
axum-idiomatic-validate-and-user-context/tests/common/: mod.rs
axum-idiomatic-validate-and-user-context/tests/e2e/: auth_flow.rs  posts_flow.rs
axum-idiomatic-validate-and-user-context/tests/integration/: post_queries.rs  user_queries.rs
axum-test-it-is-whay-it-is/: .env.example  .gitignore  Cargo.toml  QUICKSTART.md  README.md  TESTING.md  justfile
axum-test-it-is-whay-it-is/.config/: nextest.toml
axum-test-it-is-whay-it-is/.github/workflows/: ci.yml
axum-test-it-is-whay-it-is/migrations/: 20250203000001_create_users_table.sql  20250203000002_create_posts_table.sql
axum-test-it-is-whay-it-is/src/: lib.rs  main.rs
axum-test-it-is-whay-it-is/src/auth/: jwt.rs  password.rs
axum-test-it-is-whay-it-is/src/middleware/: auth.rs  validation.rs
axum-test-it-is-whay-it-is/src/shared/: error.rs  response.rs
axum-test-it-is-whay-it-is/tests/: README.md  e2e.rs  integration.rs  stress.rs  unit.rs
axum-test-it-is-whay-it-is/tests/common/: mod.rs
axum-test-it-is-whay-it-is/tests/e2e/: user_workflow_tests.rs
axum-test-it-is-whay-it-is/tests/integration/: post_repository_tests.rs  user_repository_tests.rs
axum-test-it-is-whay-it-is/tests/stress/: user_stress_tests.rs
axum-test-it-is-whay-it-is/tests/unit/: auth_tests.rs  user_service_mock_tests.rs
comp/components/: Cargo.toml
comp/components/accounts-app/: Cargo.toml
comp/components/ai-assist/: Cargo.toml
comp/components/ai-inference/: Cargo.toml
comp/components/audit-log/: Cargo.toml
comp/components/auth-guard/: Cargo.toml
comp/components/blob-store/: Cargo.toml
comp/components/cache/: Cargo.toml  README.md
comp/components/cache-backing/: Cargo.toml
comp/components/config-store/: Cargo.toml
comp/components/csv/: Cargo.toml
comp/components/email-render/: Cargo.toml
comp/components/event-bus/: Cargo.toml
comp/components/feature-flags/: Cargo.toml
comp/components/fsm-workflow/: Cargo.toml
comp/components/geo/: Cargo.toml
comp/components/i18n-catalog/: Cargo.toml
comp/components/id-generate/: Cargo.toml
comp/components/idempotency-guard/: Cargo.toml
comp/components/jsonpatch/: Cargo.toml
comp/components/llm-inference/: Cargo.toml
comp/components/lock-mutex/: Cargo.toml
comp/components/login-app/: Cargo.toml  compose.wac
comp/components/markdown/: Cargo.toml
comp/components/money/: Cargo.toml
comp/components/notify-dispatch/: Cargo.toml
comp/components/openai-provider/: Cargo.toml  README.md
comp/components/otp/: Cargo.toml
comp/components/outbox/: Cargo.toml
comp/components/pagination/: Cargo.toml
comp/components/pii-redact/: Cargo.toml
comp/components/policy-guard/: Cargo.toml
comp/components/quota/: Cargo.toml
comp/components/rate-limiter/: Cargo.toml
comp/components/record-store/: Cargo.toml
comp/components/sample-consumer/: Cargo.toml  wasmcloud.toml
comp/components/scheduler-timer/: Cargo.toml
comp/components/search-index/: Cargo.toml
comp/components/secrets-vault/: Cargo.toml
comp/components/session-store/: Cargo.toml
comp/components/slug/: Cargo.toml
comp/components/upload-policy/: Cargo.toml
comp/components/validate/: Cargo.toml
comp/components/vet-domain/: Cargo.toml  build.rs
comp/components/webhook-ingest/: Cargo.toml
comp/components/webhook-sign/: Cargo.toml
comp/host/: Cargo.toml  README.md
comp/host/src/: kv.rs  main.rs
comp/host/wit/: host.wit
connect-rpc/server/: Cargo.toml  build.rs
connect-rpc/server/src/: main.rs
fastapi-pg/: Dockerfile  docker-compose.yaml  note.db  pyproject.toml
fastapi-pg/app/: config.py  connection.py  database.py  models.py
fastapi-pg/app/tests/: test_notes.py
local-code-rag/pipeline/: README.md  pyproject.toml
local-code-rag/pipeline/src/: chunker.py  config_parser.py  embedder.py  graph_ops.py  main.py  models.py  parser.py  rag.py  repl.py  store.py  tools.py
rate-limit-queues4/app/: Cargo.toml
surreal-backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION_GUIDE.md  QUICK_START.md  README.md  docker-compose.yml  package-lock.json
surreal-backend/.config/: nextest.toml
surreal-backend/crates/api/: Cargo.toml
surreal-backend/crates/cli/: Cargo.toml
surreal-backend/crates/core/: Cargo.toml
surreal-backend/frontend/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
surreal-backend/scripts/: README.md  fix_api_handlers.sh  fix_dtos.sh  fix_repositories.sh  run_all_fixes.sh
tc-python-demo/: README.md  main.py  pyproject.toml
tc-python-demo/customers/: customers.py
tc-python-demo/features/: add.feature  environment.py
tc-python-demo/tests/: test_customers.py
wasmcloud-experiments/wasmcloud-utils/: .gitignore  Cargo.toml  FINAL_SUMMARY.txt  README.md  TEST_RESULTS.md  USAGE_PATTERNS.md  ruvector.json
wasmcloud-testing-1/: .dockerignore  .gitignore  Cargo.toml  DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Makefile  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  wadm.yaml
wasmcloud-testing-1/scripts/: deploy-app.sh  deploy-simple.sh  manual-e2e-test.sh  run-tests.sh  wait-for-ready.sh
wasmcloud-testing-1/src/: bindings.rs  lib.rs
wasmcloud-testing-1/tests/: e2e_test.rs  integration_test.rs  stress_test.rs
wasmcloud-testing-1/wit/: deps.toml  world.wit
(+1522 files in other folders)
