[package]
name = "axum-idiomatic-validate-and-user-context"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
sea-query = { version = "0.32", features = ["backend-postgres", "with-uuid", "with-chrono"] }
sea-query-binder = { version = "0.7", features = ["sqlx-postgres", "with-uuid", "with-chrono"] }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
validator = { version = "0.19", features = ["derive"] }

[features]
fast-hash = []

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

# Faster dev builds: skip most optimizations
[profile.dev]
opt-level = 0
debug = "line-tables-only"

# Optimize dependencies even in dev (they don't change often)
[profile.dev.package."*"]
opt-level = 1

# Faster test builds
[profile.test]
opt-level = 0
debug = "line-tables-only"

[profile.test.package."*"]
opt-level = 1
