[package]
name = "axum-test-it-is-whay-it-is"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
# Testing
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-test = "0.4"
mockall = "0.13"
once_cell = "1.19"
# Enable test-helpers feature for integration tests
axum-test-it-is-whay-it-is = { path = ".", features = ["test-helpers"] }

[features]
test-helpers = []

[[bin]]
name = "axum-test-it-is-whay-it-is"
path = "src/main.rs"
