[project]
name = "fastapi-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.11",
    "psutil>=5.9.8",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.38",
    "typing-inspect>=0.9.0",
]
