[project]
name = "fastapi-pg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-utils>=0.8.0",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "psutil>=5.9.8",
    "psycopg>=3.2.5",
    "psycopg2>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.38",
    "testcontainers[postgres]>=4.9.2",
    "typing-inspect>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.10",
]
