[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/migrations",
    "crates/api",
    "crates/cli",
    "tests/integration",
    "tests/e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Mark Kovari"]
license = "MIT"

[workspace.dependencies]
# SurrealDB
surrealdb = { version = "2.2", features = ["kv-mem", "kv-rocksdb", "protocol-ws", "protocol-http"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# OpenAPI/Swagger
utoipa = { version = "5.3", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Testing
rstest = "0.23"

# Authentication
jsonwebtoken = "9.3"
argon2 = "0.5"
