[project]
name = "tc-python-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "behave>=1.2.6",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "testcontainers>=4.9.2",
]

[dependency-groups]
dev = [
    "behave>=1.2.6",
    "ruff>=0.9.10",
]
