[workspace]
resolver = "2"
members = ["auth-guard", "sample-consumer", "accounts-app", "rate-limiter", "cache", "idempotency-guard", "feature-flags", "audit-log", "notify-dispatch", "webhook-ingest", "blob-store", "session-store", "outbox", "secrets-vault", "config-store", "search-index", "login-app", "money", "slug", "pagination", "validate", "i18n-catalog", "email-render", "upload-policy", "otp", "quota", "geo", "csv", "webhook-sign", "pii-redact", "jsonpatch", "markdown", "fsm-workflow", "id-generate", "record-store", "llm-inference", "ai-inference", "policy-guard", "scheduler-timer", "lock-mutex", "event-bus"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
wit-bindgen-rt = { version = "0.41", features = ["bitflags"] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }

# Pure-Rust crypto so the component builds clean for wasm32-wasip2 (no `ring`,
# no native openssl). Covers RS256 (rsa+sha2) and ES256 (p256).
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa"] }
sha2 = { version = "0.10", default-features = false }
# SHA-1 for TOTP/HOTP (RFC 6238/4226) — the interoperable default authenticator
# hash (Google Authenticator et al.). Used by the `otp` component only.
sha1 = { version = "0.10", default-features = false }
# Vetted RFC2104 HMAC (RustCrypto) — replaces hand-rolled HMAC-SHA256; provides
# constant-time `verify_slice`.
hmac = { version = "0.12", default-features = false }

# Password hashing for local accounts. Pure-Rust, wasm-clean.
argon2 = { version = "0.5", default-features = false, features = ["alloc", "password-hash"] }
password-hash = { version = "0.5", default-features = false, features = ["alloc"] }

# AEAD for secrets-vault envelope encryption. Pure-Rust, wasm-clean.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
