[project]
name = "code-rag-pipeline"
version = "0.1.0"
description = "Code ingestion pipeline: tree-sitter parsing -> Ollama embeddings -> SurrealDB vector+graph"
requires-python = ">=3.11"
dependencies = [
    "tree-sitter>=0.22.0",
    "tree-sitter-rust>=0.23.0",
    "surrealdb>=1.0.0",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
]

[project.scripts]
code-rag = "src.main:cli"
