[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pub"
test = false
bench = false

[[bin]]
name = "sub"
test = false
bench = false

[dependencies]
async-nats = "0.42.0"
tokio = { version = "1.46.1", features = ["full"]}
futures = { version = "0.3.28", default-features = false, features = ["std"] }
time = "0.3.41"
log = "0.4.27"
env_logger = "0.11.8"
