[workspace]
resolver = "2"
members = [
    "rate-limit/token-bucket",
    "rate-limit/leaky-bucket",
    "rate-limit/sliding-window",
    "rate-limit/token-bucket-http",
    "auth/session-core",
    "auth/jwt-core",
    "auth/oauth-core",
    "auth/session",
    "auth/jwt",
    "auth/oauth",
    "auth/http",
    "examples/consumer-app",
    "tests/e2e",
]

[workspace.dependencies]
wasmtime = "27.0"
wasmtime-wasi = "27.0"
wit-bindgen = "0.39.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"      # Optimize for size aggressively
lto = true           # Enable Link Time Optimization
strip = true         # Strip debug symbols
codegen-units = 1    # Better optimization (slower compile)
panic = "abort"      # Reduce panic handler code size
