[workspace]
resolver = "2"
members = [
    "rate-limit/token-bucket",
    "rate-limit/leaky-bucket",
    "rate-limit/sliding-window",
    "rate-limit/token-bucket-http",
    "auth/session-core",
    "auth/jwt-core",
    "auth/oauth-core",
    "auth/session",
    "auth/jwt",
    "auth/oauth",
    "auth/http",
    "cache/core",
    "cache/component",
    "cache/http",
    "circuit-breaker/core",
    "circuit-breaker/component",
    "retry/core",
    "retry/component",
    "observability/core",
    "observability/component",
    "feature-flags/core",
    "feature-flags/component",
    "idempotency/core",
    "idempotency/component",
    "tracing/core",
    "tracing/component",
    "health-check/core",
    "health-check/component",
    "config-loader/core",
    "config-loader/component",
    "distributed-lock/core",
    "distributed-lock/component",
    "cron/core",
    "cron/component",
    "tenant-context/core",
    "tenant-context/component",
    "batch/core",
    "batch/component",
    "event-trigger/core",
    "event-trigger/component",
    "job-queue/core",
    "job-queue/component",
    "workflow/core",
    "workflow/component",
    "workflow-api",
    "examples/consumer-app",
    "tests/e2e",
    "tests/host",
]

[workspace.dependencies]
wasmtime = { version = "27.0", features = ["component-model"] }
wasmtime-wasi = "27.0"
wit-bindgen = "0.39.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hmac = { version = "0.12", features = ["std"] }
sha2 = "0.10"

[profile.release]
opt-level = "z"      # Optimize for size aggressively
lto = true           # Enable Link Time Optimization
strip = true         # Strip debug symbols
codegen-units = 1    # Better optimization (slower compile)
panic = "abort"      # Reduce panic handler code size
