[package]
name = "ai-assist"
description = "Domain-level AI verbs (summarize/classify/extract/...) over llm:inference (ai:assist)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "ai:component"

[package.metadata.component.target]
path = "wit"
world = "ai-assist"

[package.metadata.component.target.dependencies]
"llm:inference" = { path = "../llm-inference/wit" }
