[package]
name = "audit-log"
description = "Generic append-only audit-trail capability (audit:log)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "audit:component"

[package.metadata.component.target]
path = "wit"
world = "audit-log"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:random" = { path = "../../wit/deps/wasi-random-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
