[package]
name = "auth-guard"
description = "Reference implementation of the auth:identity contract (authority world)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
rsa = { workspace = true }
p256 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }

[package.metadata.component]
package = "auth:guard"

# Use the shared, dep-vendored WIT directory at the repo root. cargo-component
# reads ../../wit/deps for the wasi:* packages we fetched with wkg.
[package.metadata.component.target]
path = "../../wit"
world = "authority"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:http" = { path = "../../wit/deps/wasi-http-0.2.0" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:random" = { path = "../../wit/deps/wasi-random-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
"wasi:cli" = { path = "../../wit/deps/wasi-cli-0.2.0" }
"wasi:config" = { path = "../../wit/deps/wasi-config-0.2.0-draft" }
"ratelimit:guard" = { path = "../rate-limiter/wit" }
