[package]
name = "cache-backing"
description = "Durable backing store for cache:store's source + sink, over wasi:keyvalue (cache:backing)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "cache:backing-component"

[package.metadata.component.target]
path = "wit"
world = "cache-backing"

[package.metadata.component.target.dependencies]
"cache:store" = { path = "../cache/wit" }
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
