[package]
name = "cache"
description = "Generic TTL-aware key/value cache capability (cache:store)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "cache:component"

[package.metadata.component.target]
path = "wit"
world = "cache-store"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
