[package]
name = "config-store"
description = "Generic typed, versioned runtime-config capability (config:store)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "config:component"

[package.metadata.component.target]
path = "wit"
world = "config-store"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
