[package]
name = "csv"
description = "RFC-4180 CSV parse + format capability (csv:stream)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "csv:component"

[package.metadata.component.target]
path = "wit"
world = "csv"
