[package]
name = "email-render"
description = "Transactional email template storage + rendering (email:template)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "email:component"

[package.metadata.component.target]
path = "wit"
world = "email-render"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
