[package]
name = "feature-flags"
description = "Generic feature-flag / percentage-rollout capability (featureflags:guard)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "featureflags:component"

[package.metadata.component.target]
path = "wit"
world = "feature-flags"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:config" = { path = "../../wit/deps/wasi-config-0.2.0-draft" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
