[package]
name = "geo"
description = "Coordinate distance + IP classification capability (geo:resolve)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "geo:component"

[package.metadata.component.target]
path = "wit"
world = "geo"
