[package]
name = "id-generate"
description = "Sortable + random unique identifier capability (id:generate)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }

[package.metadata.component]
package = "id:component"

[package.metadata.component.target]
path = "wit"
world = "id-generate"

[package.metadata.component.target.dependencies]
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:random" = { path = "../../wit/deps/wasi-random-0.2.0" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
