[package]
name = "idempotency-guard"
description = "Generic request-deduplication / replay capability (idempotency:guard)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
base64 = { workspace = true }

[package.metadata.component]
package = "idempotency:component"

[package.metadata.component.target]
path = "wit"
world = "idempotency-guard"

[package.metadata.component.target.dependencies]
"wasi:keyvalue" = { path = "../../wit/deps/wasi-keyvalue-0.2.0-draft" }
"wasi:clocks" = { path = "../../wit/deps/wasi-clocks-0.2.0" }
"wasi:config" = { path = "../../wit/deps/wasi-config-0.2.0-draft" }
"wasi:io" = { path = "../../wit/deps/wasi-io-0.2.0" }
