[package]
name = "jsonpatch"
description = "RFC 6902 JSON Patch + RFC 7386 merge-patch capability (json:patch)"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = { workspace = true }
serde_json = { workspace = true }

[package.metadata.component]
package = "json:component"

[package.metadata.component.target]
path = "wit"
world = "jsonpatch"
